--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -58,8 +58,9 @@
       <div class="content-dropdown-menu">
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDefaultValues' user_var glblslug %}">Default Values</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPaymentTerms' user_var glblslug %}">Payment Terms</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCompanyScopes' user_var glblslug %}">Scopes</a></li>
+      
       
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">Taxes</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonUnits' user_var glblslug %}">Measurements</a></li>
