--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
@@ -3,26 +3,22 @@
   {% block allif-basic-search-action %}
     {% url 'allifmaalcommonapp:commonCurrencySearch' user_var glblslug %}
   {% endblock %}
-  {% block upload-excel-file-action %}
-    {% url 'allifmaalcommonapp:commonUploadExcel' 'CommonCurrenciesModel' user_var glblslug %}
-  {% endblock %}
+ 
   {% block advanced-search-action %}
     {% url 'allifmaalcommonapp:commonCurrencyAdvanceSearch' user_var glblslug %}
   {% endblock %}
-
+   {% block upload-excel-file-action %}
+    {% url 'allifmaalcommonapp:commonUploadExcel' 'CommonCurrenciesModel' user_var glblslug %}
+  {% endblock %}
   {% block allif-header-links %}
   <a href="{% allif_get_single_nav_link_url 'Currencies' user_var glblslug %}">Currencies</a>
   <a href="{% allif_get_single_nav_link_url 'Add_New_Currency' user_var glblslug %}">New Currency</a>
   {% endblock %}
   {% block list-table-content-seciton %}
-  {% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}
+  <a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}"> {{item.name}}</a>
+  
   {% endblock %}
   {% block list-table-content-seciton-dropdown-links %}
-  {% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}
+  <a href="{% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
   {% endblock %}
-  {% block list-table-content-seciton-dropdown-delete-decline %}
-  {% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}
-  {% endblock %}
-  {% block list-table-content-seciton-dropdown-delete-confirm %}
-  {% url 'allifmaalcommonapp:commonDeleteCurrency' item.id user_var glblslug %}
-  {% endblock %}
+  
