--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/static-form-fields.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/forms/static-form-fields.html
@@ -1,4 +1,4 @@
-
+{% if ahmedyare %}
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -87,3 +87,4 @@
 </div><!--end....table row-->
 </div>
 </div>
+{% endif %}
