--- a/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/single-page-links.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/includes/links/single-page-links.html
@@ -21,6 +21,7 @@
        {% endif %}
       </a>
        
+      {% if ahmedmuse%}
       <a class="nav-link allif-single-page-tab-links" id="allif-single-page-tab-general-details-id" data-bs-toggle="tab" 
         data-bs-target="#allif-single-page-tab-general-details" type="button" role="tab" aria-controls="additional-info" aria-selected="false">
        
@@ -31,7 +32,9 @@
        {% endif %}
        
         </a>
-       
+       {% endif %}
+        
+    {% if ahmedmuse%}
         <a class="nav-link allif-single-page-tab-links" id="allif-single-page-tab-static-details-id" data-bs-toggle="tab" 
         data-bs-target="#allif-single-page-tab-static-details" type="button" role="tab" aria-controls="additional-info" aria-selected="false">
       
@@ -43,6 +46,7 @@
        
 
         </a>
+        {% endif %}
        
       </ul>
       </div>
