--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/details/item-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/details/item-details.html
@@ -26,9 +26,9 @@
 {% include 'allifmaalcommonapp/includes/headers/header-lower-section.html' %}
  <!--... ENDT OF HEADER.... -->
 </div>
+
   <div class="allifmaincontainer">
    
-{% if allifquery %}
      <div class="allif-details-table-main-wrapper">
   <!--... START OF TABLE.... -->
    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
@@ -50,7 +50,7 @@
     {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
      <!--... END OF TABLE.... -->
       </div>
-{% endif %}
+   
 
   <div class="allif-form-main-wrapper">
     <form method='POST' action=''>{% csrf_token %}
@@ -64,26 +64,32 @@
        <!--START.. Start of show/hide table section one-->
       <div class="tab-pane allif-single-page-tab-content-pane show active" id="allif-single-page-tab-core-details" role="tabpanel" aria-labelledby="allif-single-page-tab-core-details-id">
      
-        <div class="allif-forms-table-main-wrapper">
-        {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
-
-        {% block core-tab-col-one %}
-          <tr>
-            <td class="allif-fix-table-col-forms">Name</td>
-            <td>{{form.name}}</td>
-          </tr>
-        
-          {%endblock%}
-        {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-        {% block core-tab-col-two %}
-        <tr>
-          <td class="allif-fix-table-col-forms">Description</td>
-          <td>{{form.description}}</td>
-        </tr>
        
-        {%endblock%}
-        {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
-    </div>
+
+
+
+        <div class="allif-details-table-main-wrapper">
+  <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+    {% block core-details-tab-col-one %}
+      <tr>
+        <td class="allif-fix-table-col">Name</td>
+        <td>{{allifquery.name}}</td>
+      </tr>
+      {%endblock%}
+
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+      {% block core-details-tab-col-two %}
+     <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
+      </tr>
+      {% endblock %}
+        
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+     <!--... END OF TABLE.... -->
+      </div>
+
 
   </div>
        <!--END... End of show/hide table more details section one..ok...hree....-->
@@ -97,23 +103,27 @@
 
     {% if ahmedmuse%}
   <div class="tab-pane allif-single-page-tab-content-pane show" id="allif-single-page-tab-general-details" role="tabpanel" aria-labelledby="allif-single-page-tab-general-details-id">
-    <div class="allif-forms-table-main-wrapper">
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-one-section.html' %}
-       {% block general-tab-col-one %}
+    <div class="allif-details-table-main-wrapper">
+  <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+    {% block general-details-tab-col-one %}
       <tr>
-        <td class="allif-fix-table-col-forms">Balance</td>
-        <td>{{form.balance}}</td>
+        <td class="allif-fix-table-col">Name</td>
+        <td>{{allifquery.name}}</td>
       </tr>
       {%endblock%}
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-section.html' %}
-      {% block general-tab-col-two %}
-      <tr>
-        <td class="allif-fix-table-col-forms">Quantity</td>
-        <td>{{form.quantity}}</td>
+
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+      {% block general-details-tab-col-two %}
+     <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
       </tr>
-      {%endblock%}
-      {% include 'allifmaalcommonapp/includes/forms/two-column-forms-table-column-two-last-section.html' %}
-     </div>
+      {% endblock %}
+        
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+     <!--... END OF TABLE.... -->
+      </div>
     </div>
 {% endif %}
 
@@ -124,24 +134,26 @@
      </div>
     </div>
        <!--END... End of show/hide table more details section one-->
-    <div class="allif-forms-table-main-wrapper">
-    {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-one-section.html' %}
-    {% block bottom-fields-col-one%}
+   <div class="allif-details-table-main-wrapper">
+  <!--... START OF TABLE.... -->
+   {% include 'allifmaalcommonapp/includes/details/two-column-details-table-upper-section.html' %}
+    {% block bottom-details-tab-col-one %}
       <tr>
-        <td class="allif-fix-table-col-forms">Code</td>
-        <td>{{form.code}}</td>
+        <td class="allif-fix-table-col">Name</td>
+        <td>{{allifquery.name}}</td>
       </tr>
       {%endblock%}
-      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-two-section.html' %}
-      {% block bottom-fields-col-two %}
-      <tr>
-        <td class="allif-fix-table-col-forms">Number</td>
-        <td>{{form.number}}</td>
+
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-middle-section.html' %}
+      {% block bottom-details-tab-col-two %}
+     <tr>
+        <td class="allif-fix-table-col">Description</td>
+        <td>{{allifquery.description}}</td>
       </tr>
-      {%endblock%}
-      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-section.html' %}
-      {% include 'allifmaalcommonapp/includes/forms/forms-save-button.html' %}  
-      {% include 'allifmaalcommonapp/includes/forms/three-column-forms-table-column-three-last-section.html' %}
+      {% endblock %}
+        
+    {% include 'allifmaalcommonapp/includes/details/two-column-details-table-lower-section.html' %}
+     <!--... END OF TABLE.... -->
       </div>
         </div>
          </form>
