--- a/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/delete-coa-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/accounts/delete-coa-confirm.html
@@ -156,7 +156,7 @@
           <tr>
             <td>
             <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeleteChartofAccount' allifquery.id %}" class="body-delete-link">Yes</a></li>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteChartofAccount' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
             </div>
             </td>
           </tr>
