--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/add-currency.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/add-currency.html
@@ -11,40 +11,39 @@
   {% endif %}
 
   {% endblock %}
-  
+
   {% if allifquery %}
   {% block allif_core_details_col_one %}
+  <tr>
+    <td class="allif-fix-table-col">Comments</td>
+    <td>{{allifquery.comments}}</td>
+  </tr>
+    <tr>
+    <td class="allif-fix-table-col">Number</td>
+    <td>{{allifquery.number}}</td>
+  </tr>
+    {%endblock%}
+  {% block allif_core_details_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Balance</td>
+      <td>{{allifquery.balance}}</td>
+    </tr>
       <tr>
-        <td class="allif-fix-table-col">Comments</td>
-        <td>{{allifquery.comments}}</td>
-      </tr>
-       <tr>
-        <td class="allif-fix-table-col">Number</td>
-        <td>{{allifquery.number}}</td>
-      </tr>
-      {%endblock%}
-    {% block allif_core_details_col_two %}
-      <tr>
-        <td class="allif-fix-table-col">Balance</td>
-        <td>{{allifquery.balance}}</td>
-      </tr>
-       <tr>
-        <td class="allif-fix-table-col">Code</td>
-        <td>{{allifquery.code}}</td>
-      </tr>
-      {% endblock %}
-
-     {% block allif_sensitive_section_col_one %}
-      <tr>
-        <td class="allif-fix-table-col">Download {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:common_currency_pdf' allifquery.id user_var glblslug %}">Download {{allifquery}}</a></td>
-      </tr>
-      {% endblock %}
-    
-    {% block allif_sensitive_section_col_two %}
-     <tr>
-        <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCurrency' allifquery.id user_var glblslug %}">Delete {{allifquery}}</a></td>
-      </tr>
-      {% endblock %}
-    {% endif %}
+      <td class="allif-fix-table-col">Code</td>
+      <td>{{allifquery.code}}</td>
+    </tr>
+    {% endblock %}
+    {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col">Download {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:common_currency_pdf' allifquery.id user_var glblslug %}">Download {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
+  
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.commonWantToDeleteCurrency.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
+  {% endif %}
