--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/categories.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/categories/categories.html
@@ -1,182 +1,20 @@
-
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+{% load allif_navigation_tags %}
+{% block allif-basic-search-action %}
+{% url 'allifmaalcommonapp:commonCategorySearch' user_var glblslug %}
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
-<!--start....main headere-->
-<div class="card-header">
+{% block advanced-search %}{%endblock%}
+{% block upload-excel-file %}{%endblock%}
+{% block allif-header-links %}
+<a href="{% allif_get_single_nav_link_url 'Categories' user_var glblslug %}">Categories</a>
+<a href="{% allif_get_single_nav_link_url 'AddCategory' user_var glblslug %}">Add Category</a>
+{% endblock %}
+{% block list-table-content-seciton %}
+<a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCategoryDetails' item.id user_var glblslug %}"> {{item.name}}</a>
 
-  <div class="row mt-12" ><!--start....header row-->
+{% endblock %}
+{% block list-table-content-seciton-dropdown-links %}
+<a href="{% url 'allifmaalcommonapp:commonEditCategory' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
+{% endblock %}
   
-  <div class="col-md-12"><!--start....header column-->
   
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-  
-        <li><a class="dropdown-item">Looking for something?</a></li>
-        <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Clear Search</a>
-          
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonCategorySearch' user_var glblslug %}">{% csrf_token %}
-        
-          <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-          placeholder="Type Here ...">
-        
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-          </form>
-        
-      </div>
-      </ul>
-    </div>
-    <a class="amel-table-list-identifier">Categories:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-   <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Main Categories</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddCategory' user_var glblslug %}">New Category</a>
- 
-    <a href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stocks</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-
-
-<div class="allifmaincontainer"> 
-<div class="row mt-12"> <!--start....table row-->
-
-  <div class="col-md-12"> <!--start....table column-->
-
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Category</td>
-       
-          <td>Code</td>
-          <td>Department</td>
-          <td>Created On</td>
-        
-        
-          <td>Navigate</td>
-          
-          <td> . . . </td>
-          <td></td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          
-          {% for item in allifqueryset %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCategoryDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
-         
-          
-           <td>
-            {{item.code}}
-           </td>
-           <td>
-              {{item.department}}
-             </td>
-           
-           <td>
-            {{item.date|date:'d/m/Y'}}
-           </td>
-          
-           <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditCategory' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteCategory' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-           
-          </td>
-         <td> . . . </td>
-         <td></td>
-        
-    
-      </tr>
-      {% endfor %}
-      {% if searched_data %}
-      {% for item in searched_data %}
-      <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCategoryDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
-         
-          
-           <td>
-            {{item.code}}
-           </td>
-           <td>
-              {{item.department}}
-             </td>
-           
-           <td>
-            {{item.date|date:'d/m/Y'}}
-           </td>
-          
-           <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-              <div class="dropdown-content">
-                <a href="{% url 'allifmaalcommonapp:commonEditCategory' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-                <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
-                
-              </div>
-            </div>
-            <div class="dropdown allif-confirm-action">
-              
-              <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-              <a href="{% url 'allifmaalcommonapp:commonDeleteCategory' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-            </div>
-  
-           
-          </td>
-         <td> . . . </td>
-         <td></td>
-        
-    
-      </tr>
-      {% endfor %}
-        {%endif %}
-  
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-  
-      </div><!--end....table column-->
-  </div>
-
-</div><!--end....table row-->
-
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-  {% block scripts %}
- 
-  {% endblock %}
-  
-   {% endblock %}
-   
