--- a/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/taxes/taxes.html
@@ -1,170 +1,19 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-
-{% load humanize %}
-{% block title %}
-{{title}}
+{% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+{% load allif_navigation_tags %}
+{% block allif_header_forms_dropdown%}
 {% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
 
-<div class="allifmaincontainer">
-  <!--start....main headere-->
-<div class="card-header">
-  <div class="row mt-12" ><!--start....header row-->
-  <div class="col-md-12"><!--start....header column-->
-  <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">Taxes:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">Taxes</a>
-  <a href="{% url 'allifmaalcommonapp:commonSupplierTaxParameters' user_var glblslug %}">Supplier Taxes</a>
-   
+{% block allif-header-links %}
+<a href="{% allif_get_single_nav_link_url 'TaxParameters' user_var glblslug %}">Sales Tax</a>
+<a href="{% allif_get_single_nav_link_url 'AddATaxParameter' user_var glblslug %}">New Sales Tax</a>
+<a href="{% allif_get_single_nav_link_url 'SupplierTaxParameters' user_var glblslug %}">Supplier Tax Parameters</a>
+<a href="{% allif_get_single_nav_link_url 'AddATaxParameter' user_var glblslug %}">Add Supplier Tax Parameter</a>
+
+{% endblock %}
+{% block list-table-content-seciton %}
+<a class="allif-table-links" href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}"> {{item.name}}</a>
+{% endblock %}
+{% block list-table-content-seciton-dropdown-links %}
+<a href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Item Details</a>
+{% endblock %}
   
-  </div>
-    </div><!--end....header column-->
-    </div><!--end....header row-->
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-  
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-4"> <!--start....table column-->
-        <div class="card-header">
-      
-          </div><!--end....main headere-->
-
-    <div class="allif-scroll-table">
-      <div class="table-responsive allif-full-table">
-      <table class="table table-layout">
-        <thead>
-          <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Tax Name</td>
-          <td>Rate %</td>
-          </tr>
-          </thead>
-          <tbody class="allif-table-body">
-           
-          {% for item in latest %} 
-          <tr data-id="{{item.id}}">
-          <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
-        
-         <td> {{item.taxrate}}</td>
-        
-        </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-      </div>
-     </div>
-
-    
-  </div><!--end....table column-->
-
-
-  <div class="col-md-8"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Tax Name</td>
-      
-        <td>Tax Description</td>
-        <td>Rate %</td>
-       
-        <td>Navigate</td>
-        
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
-       
-       <td> {{item.description}}</td>
-      
-       <td> {{item.taxrate}}</td>
-      
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:CommonUpdateTaxDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item </a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:CommonDeleteTaxParameter' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-
-
-        </td>
-
-       <td> . . . </td>
-       <td></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-<div class="row mt-12"> <!--start....table row-->
-<div class="col-md-12"> <!--start....table column-->
-<div class="allif-form-container">
-<div class="table-content-description"> Add New Tax Rate </div>
-<div class="allif-scroll-table">
-  <div class="table-responsive allif-full-table">
-  <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row">
-     
-      <td>Tax Name</td>
-      <td>Tax Description</td>
-      <td>Tax Rate %</td>
-     
-      <td>Action</td>
-      <td></td>
-      </tr>
-      </thead>
-    <tbody class="allif-table-body">
-    <tr>
-      <form method='POST' action=''>{% csrf_token %}
-       
-      <td>{{form.name}}</td>
-      <td>{{form.description}}</td>
-      <td>{{form.taxrate}}</td>
-     
-       <td><input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-       <td></td>
-      </form>
-    </tr>
-    </tbody>
-  </table>
-  </div>
- </div>
-  </div><!--end of row div --->
-  </div>
-  </div>
-
-
- 
-</div>
-</div>
-
-  {% block scripts %}
- 
-  {% endblock %}
-  {% endblock %}
-
