--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/general/delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/general/delete-confirm.html
@@ -10,11 +10,19 @@
     
       <tr>
         <td class="allif-fix-table-col">Edit {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier" href="{% block delete-action-decline %} {% endblock %}">No, Dont Delete {{allifquery}}</a></td>
+        <td>
+          {% block delete-action-decline %}
+          <a class="amel-table-list-identifier" href="">No, Dont Delete {{allifquery}}</a>
+        {% endblock %}
+        </td>
       </tr>
      <tr>
         <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier body-delete-link" href="{% block delete-action-confirm %} {% endblock %}"> Yes, Delete {{allifquery}}</a></td>
+        <td>
+          {% block delete-action-confirm %}
+          <a class="amel-table-list-identifier body-delete-link" href=""> Yes, Delete {{allifquery}}</a>
+        {% endblock %}
+        </td>
       </tr>
      
     {% include 'allifmaalcommonapp/includes/delete/delete-confirm-lower-section.html' %}
